fixed dark mode reset problem on theme color change

--- a/_sass/minima/_header.scss
+++ b/_sass/minima/_header.scss
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: center;
   flex-direction: column;
+  padding-top: 24px;
 }
 .site-header {
   min-height: $spacing-unit * 1.865;
